# backend/app/modules/api/v1/router.py
@@ -1,6 +1,6 @@
 from fastapi import APIRouter
 
-from app.modules.api.v1 import auth, chats, instruments, issuers, research
+from app.modules.api.v1 import auth, calculations, chats, instruments, issuers, research
 
 router = APIRouter(prefix="/api/v1")
 router.include_router(auth.router)
@@ -8,3 +8,4 @@ router.include_router(chats.router)
 router.include_router(research.router)
 router.include_router(issuers.router)
 router.include_router(instruments.router)
+router.include_router(calculations.router)
